tests/Checker/everything/errors/21a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *21: for conditional is not boolean
Compilation was unsuccessful.
